# docs/swagger.json
@@ -14,6 +14,44 @@
     "basePath": "/",
     "paths": {
         "/admin": {
+            "post": {
+                "description": "Create Admins",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Create Admin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "example : Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTc2MDk3NDQsImlzcyI6IkJTRC1MSU5LIn0.DGqDz0YWO3RiqWUFOywVYkSOyImc3fDRtX9SvGpkINs",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Raw Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AdminCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Admin"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/": {
             "get": {
                 "description": "Get All Admins",
                 "produces": [
@@ -52,42 +90,6 @@
                             "items": {
                                 "$ref": "#/definitions/models.AdminDataResponse"
                             }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create Admins",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Create Admin",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "example : Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTc2MDk3NDQsImlzcyI6IkJTRC1MSU5LIn0.DGqDz0YWO3RiqWUFOywVYkSOyImc3fDRtX9SvGpkINs",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Raw Request Body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.AdminCreateRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Admin"
                         }
                     }
                 }
@@ -297,42 +299,6 @@
             }
         },
         "/dosen": {
-            "get": {
-                "description": "Get All Dosens",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Dosen"
-                ],
-                "summary": "Get All Dosen",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "example : Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTc2MDk3NDQsImlzcyI6IkJTRC1MSU5LIn0.DGqDz0YWO3RiqWUFOywVYkSOyImc3fDRtX9SvGpkINs",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "name",
-                        "name": "name",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.DosenDataResponse"
-                            }
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create Dosen",
                 "produces": [
@@ -365,6 +331,44 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Dosen"
+                        }
+                    }
+                }
+            }
+        },
+        "/dosen/": {
+            "get": {
+                "description": "Get All Dosens",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dosen"
+                ],
+                "summary": "Get All Dosen",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "example : Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTc2MDk3NDQsImlzcyI6IkJTRC1MSU5LIn0.DGqDz0YWO3RiqWUFOywVYkSOyImc3fDRtX9SvGpkINs",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DosenDataResponse"
+                            }
                         }
                     }
                 }
@@ -517,6 +521,44 @@
             }
         },
         "/mahasiswa": {
+            "post": {
+                "description": "Create Pengajuan",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Pengajuan"
+                ],
+                "summary": "Create Pengajuan",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "example : Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTc2MDk3NDQsImlzcyI6IkJTRC1MSU5LIn0.DGqDz0YWO3RiqWUFOywVYkSOyImc3fDRtX9SvGpkINs",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Raw Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PengajuanCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Pengajuan"
+                        }
+                    }
+                }
+            }
+        },
+        "/mahasiswa/": {
             "get": {
                 "description": "Get All Mahasiswa",
                 "produces": [
@@ -555,42 +597,6 @@
                             "items": {
                                 "$ref": "#/definitions/models.MahasiswaDataResponse"
                             }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create Mahasiswa",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Mahasiswa"
-                ],
-                "summary": "Create Mahasiswa",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "example : Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTc2MDk3NDQsImlzcyI6IkJTRC1MSU5LIn0.DGqDz0YWO3RiqWUFOywVYkSOyImc3fDRtX9SvGpkINs",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Raw Request Body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.MahasiswaCreateRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Mahasiswa"
                         }
                     }
                 }
@@ -707,6 +713,37 @@
             }
         },
         "/notification": {
+            "post": {
+                "description": "Create Notifications",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notification"
+                ],
+                "summary": "Create Notification",
+                "parameters": [
+                    {
+                        "description": "Raw Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.MobileNotificationCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.MobileNotification"
+                        }
+                    }
+                }
+            }
+        },
+        "/notification/": {
             "get": {
                 "description": "Get All Notification based on Id from auth",
                 "produces": [
@@ -733,35 +770,6 @@
                             "items": {
                                 "$ref": "#/definitions/models.MobileNotification"
                             }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create Notifications",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Notification"
-                ],
-                "summary": "Create Notification",
-                "parameters": [
-                    {
-                        "description": "Raw Request Body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.MobileNotificationCreateRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.MobileNotification"
                         }
                     }
                 }
@@ -796,7 +804,7 @@
                 }
             }
         },
-        "/pengajuan": {
+        "/pengajuan/": {
             "get": {
                 "description": "Get All Pengajuan",
                 "produces": [
@@ -1555,6 +1563,38 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.PengajuanCreateRequest": {
+            "type": "object",
+            "properties": {
+                "abstrak": {
+                    "type": "string"
+                },
+                "dospem1_id": {
+                    "type": "integer"
+                },
+                "dospem2_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "judul": {
+                    "type": "string"
+                },
+                "mahasiswa_id": {
+                    "type": "integer"
+                },
+                "peminatan": {
+                    "type": "string"
+                },
+                "rejected_note": {
+                    "type": "string"
+                },
+                "tempat_penelitian": {
                     "type": "string"
                 }
             }
